# point_processing

./: CMakeCache.txt  CMakeLists.txt  CMakeListsPP  Cmakelists  CustomMesh.m  Makefile  Mesh.m  README.md  Untitled-1.cpp  build.ninja  cmake_install.cmake  debug_output.txt  loadPointCloud.py  main.cpp  mainProcess.cpp  npx depcruise --init  point_processing_check.m  python3.py  test.ply  test_includes  test_includes.cpp  test_read.cpp
.cache/clangd/index/: main.cpp.8127B0D7359C4C14.idx  test_includes.cpp.67D19A95BA5792F0.idx
.cmake/api/v1/reply/: cache-v2-e98788b976b4a17d36bc.json  cmakeFiles-v1-8ff3916cd0b1801936f0.json  codemodel-v2-4bdbe55bc532c7c57922.json  index-2023-12-15T18-05-24-0833.json  target-PointProcessing-Release-ff10536f453789dc9295.json  target-test_includes-Release-7511ba9c7a89cefb9b9b.json
